--- a/.env.example
+++ b/.env.example
@@ -66,10 +66,10 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-PUSHER_APP_ID=2019397
-PUSHER_APP_KEY=47a9ddb372d1d2c1754e
-PUSHER_APP_SECRET=3b42706f8e72a82f459a
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
 
